--- a/SuperHeroesApp.ComponentClassLib/_Imports.razor
+++ b/SuperHeroesApp.ComponentClassLib/_Imports.razor
@@ -1,1 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Forms
+@using SuperHeroesApp.ComponentClassLib.Models
+@using SuperHeroesApp.ComponentClassLib.Components.SuperHeroDetails
