--- a/SuperHeroesApp.WebAssembly/Pages/HeroesList.razor
+++ b/SuperHeroesApp.WebAssembly/Pages/HeroesList.razor
@@ -1,6 +1,7 @@
 ﻿@page "/super-heroes"
 @page "/"
 @inject NavigationManager NavigationManager
+@inject ISuperHeroesService SuperHeroesService
 
 <SuperHeroesList Items="@_heroesList">
     <AddHeroItem>
@@ -18,44 +19,18 @@
 </SuperHeroesList>
 
 @code{
-    private List<SuperHeroModel> _heroesList = new List<SuperHeroModel>
-    {
-        new SuperHeroModel
-        {
-            Id = 1,
-            Name = "Natasha Romanoff",
-            Character = "BLACK WIDOW",
-            Universe = UniverseType.Marvel,
-            Description = "Trusted by some and feared by most, the Black Widow strives to make up for the bad she had done in the past by helping the world, even if that means getting her hands dirty in the process."
-        },
-        new SuperHeroModel
-        {
-            Id = 2,
-            Name = "Carol Danvers",
-            Character = "CAPTAIN MARVEL",
-            Universe = UniverseType.Marvel,
-            Description = "Near death, Carol Danvers was transformed into a powerful warrior for the Kree. Now, returning to Earth years later, she must remember her past in order to to prevent a full invasion by shapeshifting aliens, the Skrulls."
-        },
-        new SuperHeroModel
-        {
-            Id = 3,
-            Name = "Peter Parker",
-            Character = "SPIDER-MAN",
-            Universe = UniverseType.Marvel,
-            Description = "With amazing spider-like abilities, teenage science whiz Peter Parker fights crime and dreams of becoming an Avenger as Spider-Man."
-        },
-        new SuperHeroModel
-        {
-            Id = 4,
-            Name = "Tony Stark",
-            Character = "IRON MAN",
-            Universe = UniverseType.Marvel,
-            Description = "Inventor Tony Stark applies his genius for high-tech solutions to problems as Iron Man, the armored Avenger."
-        }
-    };
+    private List<SuperHeroModel> _heroesList;
 
     private void NavigateToCreateHeroComponent()
     {
         NavigationManager.NavigateTo("super-heroes/create");
     }
+
+    protected override async Task OnInitializedAsync()
+    {
+        await base.OnInitializedAsync();
+
+        _heroesList = await SuperHeroesService.GetSuperHeroesAsync();
+    }
+
 }
