--- a/SuperHeroesApp.WebAssembly/_Imports.razor
+++ b/SuperHeroesApp.WebAssembly/_Imports.razor
@@ -8,3 +8,4 @@
 @using SuperHeroesApp.ComponentClassLib.Components.SuperHeroesList
 @using SuperHeroesApp.ComponentClassLib.Models
 @using SuperHeroesApp.ComponentClassLib.Components.SuperHero
+@using SuperHeroesApp.ComponentClassLib.Services
