--- a/SuperHeroesApp.Server/_Imports.razor
+++ b/SuperHeroesApp.Server/_Imports.razor
@@ -7,3 +7,7 @@
 @using Microsoft.JSInterop
 @using SuperHeroesApp.Server
 @using SuperHeroesApp.Server.Shared
+@using SuperHeroesApp.ComponentClassLib.Components.SuperHeroesList
+@using SuperHeroesApp.ComponentClassLib.Models
+@using SuperHeroesApp.ComponentClassLib.Components.SuperHero
+@using SuperHeroesApp.ComponentClassLib.Services
