--- a/SuperHeroesApp.ComponentClassLib/_Imports.razor
+++ b/SuperHeroesApp.ComponentClassLib/_Imports.razor
@@ -2,3 +2,4 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using SuperHeroesApp.ComponentClassLib.Models
 @using SuperHeroesApp.ComponentClassLib.Components.SuperHeroDetails
+@using Microsoft.AspNetCore.Components
