--- a/SuperHeroesApp.WebAssembly/Pages/Hero/CreateHero.razor
+++ b/SuperHeroesApp.WebAssembly/Pages/Hero/CreateHero.razor
@@ -2,7 +2,7 @@
 @inject ISuperHeroesService SuperHeroesService
 @inject NavigationManager NavigationManager
 
-<SuperHero OnSuperHeroAdded="AddHero"></SuperHero>
+<CreateSuperHero OnSuperHeroAdded="AddHero"></CreateSuperHero>
 
 @code {
     private async Task AddHero(SuperHeroModel model)
