--- a/SuperHeroesApp.WebAssembly/Shared/MainLayout.razor
+++ b/SuperHeroesApp.WebAssembly/Shared/MainLayout.razor
@@ -1,7 +1,11 @@
 ﻿@inherits LayoutComponentBase
 
+<UserData></UserData>
+
 <div class="main">
     <div class="content px-4">
-        @Body
+        <AuthorizeView>
+            @Body
+        </AuthorizeView>
     </div>
 </div>
