--- a/SuperHeroesApp.WebAssembly/_Imports.razor
+++ b/SuperHeroesApp.WebAssembly/_Imports.razor
@@ -7,5 +7,9 @@
 @using SuperHeroesApp.WebAssembly.Shared
 @using SuperHeroesApp.ComponentClassLib.Components.SuperHeroesList
 @using SuperHeroesApp.ComponentClassLib.Models
-@using SuperHeroesApp.ComponentClassLib.Components.SuperHero
+@using SuperHeroesApp.ComponentClassLib.Components.CreateSuperHero
 @using SuperHeroesApp.ComponentClassLib.Services
+@using SuperHeroesApp.ComponentClassLib.Components.SuperHeroDetails
+@using SuperHeroesApp.WebAssembly.Pages.Security
+@using Microsoft.AspNetCore.Authorization.Infrastructure
+@using Microsoft.AspNetCore.Components.Authorization
