--- a/SuperHeroesApp.WebAssembly/Pages/Security/Login.razor
+++ b/SuperHeroesApp.WebAssembly/Pages/Security/Login.razor
@@ -1,5 +1,4 @@
 ﻿@page "/login"
-@using Microsoft.AspNetCore.Authorization
 @using SuperHeroesApp.WebAssembly.Data
 @using SuperHeroesApp.WebAssembly.Data.Models.Login
 @inject IAuthService AuthService;
@@ -9,7 +8,7 @@
     <DataAnnotationsValidator/>
 
     <div class="form-group row">
-        <h3 class="col-sm-6">Create new hero</h3>
+        <h3 class="col-sm-6">Log in</h3>
     </div>
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Email</label>
@@ -21,7 +20,7 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Password</label>
         <div class="col-sm-6">
-            <InputText @bind-Value="@_loginInput.Password" class="form-control" placeholder="Password"></InputText>
+            <InputText @bind-Value="@_loginInput.Password" type="password" class="form-control" placeholder="Password"></InputText>
             <ValidationMessage For="@(() => _loginInput.Password)"></ValidationMessage>
         </div>
     </div>
@@ -46,9 +45,12 @@
     {
         var loginResult = await AuthService.LoginAsync(_loginInput);
 
+        Console.WriteLine($"Login was successful: {loginResult.IsSuccessful}");
+        
         if (!loginResult.IsSuccessful)
         {
             ErrorMessage = loginResult.ErrorMessage;
+            return;
         }
         
         NavigationManager.NavigateTo("/");
