--- a/SuperHeroesApp.WebAssembly/Pages/Hero/CreateHero.razor
+++ b/SuperHeroesApp.WebAssembly/Pages/Hero/CreateHero.razor
@@ -1,4 +1,5 @@
 ﻿@page "/super-heroes/create"
+@using Microsoft.AspNetCore.Authorization
 @inject ISuperHeroesService SuperHeroesService
 @inject NavigationManager NavigationManager
 
