--- a/SuperHeroesApp.WebAssembly/Shared/MainLayout.razor
+++ b/SuperHeroesApp.WebAssembly/Shared/MainLayout.razor
@@ -1,11 +1,18 @@
 ﻿@inherits LayoutComponentBase
 
-<UserData></UserData>
+<div class="sidebar">
+    <UserData />
+</div>
 
 <div class="main">
     <div class="content px-4">
-        <AuthorizeView>
-            @Body
+        <AuthorizeView Policy="DemoPolicy">
+            <Authorized>
+                @Body
+            </Authorized>
+            <NotAuthorized>
+                <Login />
+            </NotAuthorized>
         </AuthorizeView>
     </div>
 </div>
