--- a/SuperHeroesApp.WebAssembly/Pages/Security/SignUp.razor
+++ b/SuperHeroesApp.WebAssembly/Pages/Security/SignUp.razor
@@ -1,4 +1,4 @@
-﻿@page "/register"
+﻿@page "/sign-up"
 @using System.Collections.ObjectModel
 @using SuperHeroesApp.WebAssembly.Data
 @using SuperHeroesApp.WebAssembly.Data.Models.Register
