--- a/SuperHeroesApp.WebAssembly/App.razor
+++ b/SuperHeroesApp.WebAssembly/App.razor
@@ -1,14 +1,14 @@
-﻿<Router AppAssembly="@typeof(Program).Assembly">
+﻿<CascadingAuthenticationState>
+<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="@routeData"
                             DefaultLayout="@typeof(MainLayout)">
         </AuthorizeRouteView>
     </Found>
     <NotFound>
-        <CascadingAuthenticationState>
-            <LayoutView Layout="@typeof(MainLayout)">
-                <p>Sorry, there's nothing at this address.</p>
-            </LayoutView>
-        </CascadingAuthenticationState>
+        <LayoutView Layout="@typeof(MainLayout)">
+            <p>Sorry, there's nothing at this address.</p>
+        </LayoutView>
     </NotFound>
 </Router>
+</CascadingAuthenticationState>
