--- a/SuperHeroesApp.WebAssembly/Pages/Security/LogOut.razor
+++ b/SuperHeroesApp.WebAssembly/Pages/Security/LogOut.razor
@@ -7,7 +7,6 @@
     protected override async Task OnInitializedAsync()
     {
         await AuthService.LogoutAsync();
-        
-        NavigationManager.NavigateTo("/");
+        NavigationManager.NavigateTo("/login");
     }
 }
