--- a/SuperHeroesApp.WebAssembly/Pages/Security/Login.razor
+++ b/SuperHeroesApp.WebAssembly/Pages/Security/Login.razor
@@ -53,6 +53,6 @@
             return;
         }
 
-        NavigationManager.NavigateTo("/");
+        NavigationManager.NavigateTo("/super-heroes");
     }
 }
