--- a/SuperHeroesApp.WebAssembly/App.razor
+++ b/SuperHeroesApp.WebAssembly/App.razor
@@ -1,9 +1,6 @@
-﻿<CascadingAuthenticationState>
-<Router AppAssembly="@typeof(Program).Assembly">
+﻿<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
-        <AuthorizeRouteView RouteData="@routeData"
-                            DefaultLayout="@typeof(MainLayout)">
-        </AuthorizeRouteView>
+        <AuthorizeRouteView  RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
@@ -11,4 +8,3 @@
         </LayoutView>
     </NotFound>
 </Router>
-</CascadingAuthenticationState>
