--- a/SuperHeroesApp.Server/_Imports.razor
+++ b/SuperHeroesApp.Server/_Imports.razor
@@ -1,13 +1,12 @@
 ﻿@using System.Net.Http
-@using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using SuperHeroesApp.Server
-@using SuperHeroesApp.Server.Shared
 @using SuperHeroesApp.ComponentClassLib.Components.SuperHeroesList
 @using SuperHeroesApp.ComponentClassLib.Models
-@using SuperHeroesApp.ComponentClassLib.Components.SuperHero
+@using SuperHeroesApp.ComponentClassLib.Components.CreateSuperHero
 @using SuperHeroesApp.ComponentClassLib.Services
+@using SuperHeroesApp.ComponentClassLib.Components.SuperHeroDetails
+@using Microsoft.AspNetCore.Authorization.Infrastructure
+@using Microsoft.AspNetCore.Components.Authorization
